feat(packet): basic tcp and udp support

--- a/rpcap-packet/Cargo.toml
+++ b/rpcap-packet/Cargo.toml
@@ -12,7 +12,7 @@ strum = { version = "0.26.2", features = ["derive", "phf"] }
 thiserror = "1.0.57"
 
 [dev-dependencies]
-anyhow = "1.0.80"
+anyhow = { workspace = true }
 
 [features]
 
