--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,19 +5,27 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[workspace]
-members = ["rpcap-packet"]
-
 [dependencies]
 rpcap-packet = { path = "rpcap-packet" }
-pcap = { version = "1.2.0", optional = true }
+pcap = { workspace = true, optional = true }
 
 [dev-dependencies]
-anyhow = "1.0.80"
-clap = { version = "4.5.2", features = ["derive"] }
-csv = "1.3.0"
-pcap = { version = "1.2.0" }
-serde = { version = "1.0.197", features = ["derive"] }
+anyhow = { workspace = true }
 
 [features]
 default = ["pcap"]
+
+[workspace]
+members = ["rpcap-packet", "examples/*"]
+default-members = ["rpcap-packet"]
+
+[workspace.package]
+authors = ["duskmoon <kp.campbell.he@duskmoon314.com>"]
+
+[workspace.dependencies]
+rpcap = { path = "." }
+anyhow = "1.0.81"
+clap = { version = "4.5.2", features = ["derive"] }
+csv = { version = "1.3.0" }
+pcap = { version = "1.2.0" }
+serde = { version = "1.0.197", features = ["derive"] }
