feat(example): add tqdm to pcap2csv
Using file_size / 96 to approximate the number of
packets in the pcap file, and then use tqdm to
display the progress of the conversion.

--- a/examples/pcap2csv/Cargo.toml
+++ b/examples/pcap2csv/Cargo.toml
@@ -12,3 +12,4 @@ csv = { workspace = true }
 ipnet = { version = "2.9.0", features = ["serde"] }
 rpcap = { workspace = true }
 serde = { workspace = true }
+tqdm = "0.6.0"
