--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,7 @@ anyhow = { workspace = true }
 default = ["pcap"]
 
 [workspace]
-members = ["rpcap-packet", "examples/*"]
+members = ["rpcap-packet", "examples/*", "rpcap-impl"]
 default-members = ["rpcap-packet"]
 
 [workspace.package]
@@ -24,6 +24,7 @@ authors = ["duskmoon <kp.campbell.he@duskmoon314.com>"]
 
 [workspace.dependencies]
 rpcap = { path = "." }
+rpcap-impl = { path = "rpcap-impl" }
 anyhow = "1.0.81"
 clap = { version = "4.5.2", features = ["derive"] }
 csv = { version = "1.3.0" }
