--- a/rpcap-packet/Cargo.toml
+++ b/rpcap-packet/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 num_enum = "0.7.2"
 paste = "1.0.14"
+rpcap-impl = { workspace = true, features = ["packet"] }
 strum = { version = "0.26.2", features = ["derive", "phf"] }
 thiserror = "1.0.57"
 
